--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
 
+  <meta property="og:title" content="{{"site.title"}}">
   {% if page.image %}
     <meta property="og:image" content="{{"page.image"}}">
   {% else %}
