--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,9 +9,9 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
 
-  <meta property="og:title" content="{{"site.title"}}">
+  <meta property="og:title" content="{{ site.title }}">
   {% if page.image %}
-    <meta property="og:image" content="{{"page.image"}}">
+    <meta property="og:image" content="{{ page.image }}">
   {% else %}
     <meta property="og:image" content="assets/profile-picture.jpg">
   {% endif %}
