Fix index social graph image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,6 @@
   {% if page.image %}
     <meta property="og:image" content="{{ page.image }}">
   {% else %}
-    <meta property="og:image" content="assets/profile-picture.jpg">
+    <meta property="og:image" content="/assets/profile-picture.jpg">
   {% endif %}
 </head>
