Add background images (commented out)

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,3 +3,8 @@
 ---
 
 @import "minima";
+
+// body {
+//     background-image: url('background/so-white.png');
+//     background-repeat: repeat;
+// }
