--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,9 @@
+<div class="header-colors">
+	<div class="color1"></div>
+	<div class="color2"></div>
+	<div class="color3"></div>
+</div>
 <header class="site-header" role="banner">
-
 	<div class="wrapper">
 		{%- assign default_paths = site.pages | map: "path" -%}
 		{%- assign page_paths = site.header_pages | default: default_paths -%}
