--- a/_includes/social.html
+++ b/_includes/social.html
@@ -12,13 +12,13 @@
         <use xlink:href="{{ '/assets/minima-social-icons.svg#flickr' | relative_url }}"></use>
       </svg> <span class="username">{{ site.flickr_username| escape }}</span></a></li>{%- endif -%}
   {%- if site.github_username -%}<li><a href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><img
-        class="png-icon" src="assets/icons/github.png"> <span class="username"></span></a></li>{%- endif -%}
+        class="png-icon" src="/assets/icons/github.png"> <span class="username"></span></a></li>{%- endif -%}
   {%- if site.instagram_username -%}<li><a
       href="https://instagram.com/{{ site.instagram_username| cgi_escape | escape }}"><svg class="svg-icon">
         <use xlink:href="{{ '/assets/minima-social-icons.svg#instagram' | relative_url }}"></use>
       </svg> <span class="username">{{ site.instagram_username| escape }}</span></a></li>{%- endif -%}
   {%- if site.linkedin_username -%}<li><a
-      href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><img class="png-icon" src="assets/icons/linkedin.png" <span class="username"></span></a></li>{%- endif -%}
+      href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><img class="png-icon" src="/assets/icons/linkedin.png" <span class="username"></span></a></li>{%- endif -%}
   {%- if site.pinterest_username -%}<li><a
       href="https://www.pinterest.com/{{ site.pinterest_username| cgi_escape | escape }}"><svg class="svg-icon">
         <use xlink:href="{{ '/assets/minima-social-icons.svg#pinterest' | relative_url }}"></use>
@@ -42,4 +42,6 @@
   {%- if site.rss -%}<li><a href="{{ 'feed.xml' | relative_url }}"><svg class="svg-icon">
         <use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use>
       </svg> <span>{{ site.rss | escape }}</span></a></li>{%- endif -%}
+
+      <a href="mosmos.mx"><img class="png-icon" src="/assets/icons/globe.png"></img></a>
 </ul>
