--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -238,6 +238,13 @@ pre {
   margin-left: 4px;
 }
 
+@media screen and (max-width: 800px) {
+  .png-icon {
+    width: 32px;
+    height: 32px;
+  }
+}
+
 
 
 /**
