--- a/_includes/social.html
+++ b/_includes/social.html
@@ -43,5 +43,5 @@
         <use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use>
       </svg> <span>{{ site.rss | escape }}</span></a></li>{%- endif -%}
 
-      <a href="https://mosmos.mx"><img class="png-icon" src="/assets/icons/globe.png"></img></a>
+      <a href="https://github.com/SimonHFrost/static-resume/raw/master/Simon%20Frost%20-%20Frontend%20Engineer%20Resume%202023.pdf"><img class="png-icon" src="/assets/icons/globe.png"></img></a>
 </ul>
