header style, background image

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -8,34 +8,10 @@
   // Positioning context for the mobile navigation icon
   position: relative;
 
-  & .wrapper {
+  & .header-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-}
-
-.header-colors {
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: row;
-  height: 3px;
-  width: 100%;
-
-  .color1 {
-    background-color: #DE5B1B;
-    flex: 1;
-  }
-
-  .color2 {
-    background-color: #F8DB5B;
-    flex: 1;
-  }
-
-  .color3 {
-    background-color: #778183;
-    flex: 1;
   }
 }
 
