--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,7 +4,48 @@
 
 @import "minima";
 
-// body {
-//     background-image: url('background/so-white.png');
-//     background-repeat: repeat;
-// }
+body {
+    background-image: url('background/white-waves.webp');
+    background-repeat: repeat;
+}
+
+.wrapper {
+    background-color: white;
+}
+
+.page-content {
+    padding: 0;
+}
+
+.site-footer {
+    padding: 0;
+}
+
+.site-header {
+    border-bottom: 0;
+    min-height: 0;
+}
+
+.header-colors {
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    height: 3px;
+    width: 100%;
+
+    .color1 {
+      background-color: #DE5B1B;
+      flex: 1;
+    }
+
+    .color2 {
+      background-color: #F8DB5B;
+      flex: 1;
+    }
+
+    .color3 {
+      background-color: #778183;
+      flex: 1;
+    }
+  }
