--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -190,10 +190,12 @@ pre {
  * Wrapper
  */
 .wrapper {
+  background-color: white;
   max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
   max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
   margin-right: auto;
   margin-left: auto;
+  padding-top: 16px;
   padding-right: $spacing-unit;
   padding-left: $spacing-unit;
   @extend %clearfix;
