--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,5 +1,5 @@
 <ul class="social-media-list">
-  <span>✉️ simonhfrost(at)gmail.com</span>
+  <span class="desktop-only">✉️ simonhfrost(at)gmail.com</span>
   {%- if site.dribbble_username -%}<li><a
       href="https://dribbble.com/{{ site.dribbble_username| cgi_escape | escape }}"><svg class="svg-icon">
         <use xlink:href="{{ '/assets/minima-social-icons.svg#dribbble' | relative_url }}"></use>
