--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -190,7 +190,6 @@ pre {
  * Wrapper
  */
 .wrapper {
-  background-color: white;
   max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
   max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
   margin-right: auto;
@@ -208,7 +207,13 @@ pre {
   }
 }
 
+.background-gradient {
+  background: url('background/natural-white.png'), linear-gradient(to bottom, #FAFAFA 30%, #FAFAFA 60%, #d5d5d5 80%);
+}
 
+.background-block-color {
+  background: #FAFAFA;
+}
 
 /**
  * Clearfix
