--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
-      <div class="wrapper background-gradient">
+      <div class="wrapper">
         {{ content }}
       </div>
     </main>
