More tab styling

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,9 +41,15 @@ layout: default
     <label for="tab2" class="tabs__label">Recent Projects</label>
     <div class="tabs__content">
       <div id="content2" class="tab-content">
-        <h2>First Project</h2>
+        <div>
+          <h2>Slowmad.app</h2>
+          <p>Slowmad is a travel optimiser app that suggests stops on the way to your destination</p>
+        </div>
 
-        <h2>Second Project</h2>
+        <div>
+          <h2>Aqifast.com</h2>
+          <p>Aqifast is a website to get the AQI (Air Quality Index) at your current location fast!</p>
+        </div>
       </div>
     </div>
   </div>
