--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -260,15 +260,24 @@
 .tabs {
   display: flex;
   flex-wrap: wrap;
-  max-width: 400px;
   font-family: sans-serif;
 }
 
 .tabs__label {
   font-size: 24px;
-  padding: 10px 5px 0px 0px;
+  padding-left: 5px;
+  padding-right: 5px;
   margin-bottom: 10px;
+  margin-top: 10px;
+  // width: 200px;
+  border-top: 3px solid grey;
+  border-right: 3px solid grey;
+  border-left: 3px solid grey;
   cursor: pointer;
+}
+
+.tabs__label:first-of-type {
+  border-right: 0;
 }
 
 .tabs__radio {
