Project tab styling

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: default
   {%- if site.posts.size > 0 -%}
   <div class="tabs">
     <input type="radio" class="tabs__radio" name="tabs-example" id="tab1" checked>
-    <label for="tab1" class="tabs__label">Blog Posts</label>
+    <label for="tab1" class="tabs__label">Blog</label>
     <div class="tabs__content">
       <div id="content1" class="tab-content">
         <!-- <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2> -->
