--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -259,17 +259,17 @@
 
 .tabs {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   font-family: sans-serif;
 }
 
 .tabs__label {
+  flex: 1;
   font-size: 24px;
   padding-left: 5px;
   padding-right: 5px;
   margin-bottom: 10px;
-  margin-top: 10px;
-  // width: 200px;
   border-top: 3px solid grey;
   border-right: 3px solid grey;
   border-left: 3px solid grey;
@@ -291,8 +291,11 @@
 }
 
 .tabs__radio:checked + .tabs__label {
-  font-weight: bold;
   color: #de5b1b;
+}
+
+.tabs__radio:not(:checked) + .tabs__label {
+  border-bottom: solid 3px grey;
 }
 
 .tabs__radio:checked + .tabs__label + .tabs__content {
