--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -196,9 +196,13 @@
 .post-list {
   margin-left: 0;
   list-style: none;
+  padding: 8px;
+  border-bottom: 3px solid #778183;
+  border-left: 3px solid #778183;
+  border-right: 3px solid #778183;
 
   > li {
-    margin-bottom: $spacing-unit;
+    margin-bottom: 20px;
   }
 }
 
@@ -265,11 +269,11 @@
 }
 
 .tabs__label {
+  text-align: center;
   flex: 1;
   font-size: 24px;
   padding-left: 5px;
   padding-right: 5px;
-  margin-bottom: 10px;
   border-top: 3px solid grey;
   border-right: 3px solid grey;
   border-left: 3px solid grey;
