--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -198,6 +198,7 @@
   border-bottom: 3px solid #778183;
   border-left: 3px solid #778183;
   border-right: 3px solid #778183;
+  margin-bottom: 16px;
 }
 
 .post-list {
@@ -307,4 +308,22 @@
 
 .tabs__radio:checked + .tabs__label + .tabs__content {
   display: initial;
+}
+
+.mobile-only {
+  display: none;
+}
+
+.desktop-only {
+  display: block;
+}
+
+@media (max-width: 768px) {
+  .mobile-only {
+    display: block;
+  }
+
+  .desktop-only {
+    display: none;
+  }
 }
