Update slowmad images

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@ layout: default
       </div>
     </div>
     <input type="radio" class="tabs__radio" name="tabs-example" id="tab2">
-    <label for="tab2" class="tabs__label">Recent Projects</label>
+    <label for="tab2" class="tabs__label">Projects</label>
     <div class="tabs__content">
       <div id="content2" class="tab-content">
         <div>
