Remove wrapper padding

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,12 +43,12 @@ layout: default
       <div id="content2" class="tab-content">
         <div>
           <h2>Slowmad.app</h2>
-          <p>Slowmad is a travel optimiser app that suggests stops on the way to your destination</p>
+          <p>A trip planner for road trips</p>
         </div>
 
         <div>
           <h2>Aqifast.com</h2>
-          <p>Aqifast is a website to get the AQI (Air Quality Index) at your current location fast!</p>
+          <p>A design and performance focused AQI (Air Quality Index) checker</p>
         </div>
       </div>
     </div>
