--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -205,6 +205,8 @@ pre {
   margin-right: auto;
   margin-left: auto;
   padding-top: 16px;
+  padding-right: 15px;
+  padding-left: 15px;
   @extend %clearfix;
 
   @include media-query($on-laptop) {
