Change slowmad description

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@ layout: default
       <div id="content2" class="tab-content">
         <div>
           <h2>Slowmad.app</h2>
-          <p>A trip planner for road trips</p>
+          <p>A trip planner for slower trips</p>
         </div>
 
         <div>
