--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,13 +42,20 @@ layout: default
     <div class="tabs__content">
       <div id="content2" class="tab-content">
         <div>
-          <h2>Slowmad.app</h2>
+          <a href="https://slowmad.app"><h2>Slowmad.app <img src="/assets/icons/external-link.svg"/></h2></a>
           <p>A trip planner for slower trips</p>
+          <div class="portfolio-image-row">
+            <img src='/assets/portfolio/slowmad/slowmad-1.jpg'></img>
+            <img src='/assets/portfolio/slowmad/slowmad-2.jpg'></img>
+          </div>
         </div>
 
         <div>
-          <h2>Aqifast.com</h2>
+          <a href="https://aqifast.com"><h2>Aqifast.com <img src="/assets/icons/external-link.svg"/></h2></a>
           <p>A design and performance focused AQI (Air Quality Index) checker</p>
+          <div class="portfolio-image-row">
+            <img src='/assets/portfolio/aqifast/aqifast-1.jpg'></img>
+          </div>
         </div>
       </div>
     </div>
