Reduce portfolio image size on desktop

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@ layout: default
     <div class="tabs__content">
       <div id="content2" class="tab-content">
         <div>
-          <a href="https://slowmad.app"><h2>Slowmad.app <img src="/assets/icons/external-link.svg"/></h2></a>
+          <a href="https://slowmad.app"><h2>Slowmad.app (2024) <img src="/assets/icons/external-link.svg"/></h2></a>
           <p>A trip planner for slower trips</p>
           <div class="portfolio-image-row">
             <img src='/assets/portfolio/slowmad/slowmad-1.jpg'></img>
@@ -51,7 +51,7 @@ layout: default
         </div>
 
         <div>
-          <a href="https://aqifast.com"><h2>Aqifast.com <img src="/assets/icons/external-link.svg"/></h2></a>
+          <a href="https://aqifast.com"><h2>Aqifast.com (2024) <img src="/assets/icons/external-link.svg"/></h2></a>
           <p>A design and performance focused AQI (Air Quality Index) checker</p>
           <div class="portfolio-image-row">
             <img src='/assets/portfolio/aqifast/aqifast-1.jpg'></img>
