--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@ layout: default
       <div id="content2" class="tab-content">
         <div>
           <a href="https://slowmad.app"><h2>Slowmad.app (2024) <img src="/assets/icons/external-link.svg"/></h2></a>
-          <p>A trip planner for slower trips</p>
+          <p>Trip planner for slower trips</p>
           <div class="portfolio-image-row">
             <img src='/assets/portfolio/slowmad/slowmad-1.jpg'></img>
             <img src='/assets/portfolio/slowmad/slowmad-2.jpg'></img>
@@ -52,7 +52,7 @@ layout: default
 
         <div>
           <a href="https://aqifast.com"><h2>Aqifast.com (2024) <img src="/assets/icons/external-link.svg"/></h2></a>
-          <p>A design and performance focused AQI (Air Quality Index) checker</p>
+          <p>Design and performance focused AQI (Air Quality Index) checker</p>
           <div class="portfolio-image-row">
             <img src='/assets/portfolio/aqifast/aqifast-1.jpg'></img>
           </div>
