Update slowmad description

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@ layout: default
       <div id="content2" class="tab-content">
         <div>
           <a href="https://slowmad.app"><h2>Slowmad.app (2024) <img src="/assets/icons/external-link.svg"/></h2></a>
-          <p>Trip planner for slower trips</p>
+          <p>Trip planner using Claude AI for recommendations and routing</p>
           <div class="portfolio-image-row">
             <img src='/assets/portfolio/slowmad/slowmad-1.jpg'></img>
             <img src='/assets/portfolio/slowmad/slowmad-2.jpg'></img>
