Add code blocks

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -120,3 +120,11 @@ body {
 .rss-subscribe {
   margin-bottom: 0;
 }
+
+.code-block {
+  padding: 4px;
+  margin-bottom: 8px;
+  background-color: #111;
+  font-family: monospace;
+  color: white;
+}
