--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,17 @@
 layout: default
 ---
 
+<script>
+    var urlParams = new URLSearchParams(window.location.search);
+    if (urlParams.get('portfolio') === 'true') {
+      window.onload = function() {
+        document.querySelector('#tab-portfolio').checked = true;
+      };
+    }
+
+</script>
+
+
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
@@ -11,8 +22,8 @@ layout: default
 
   {%- if site.posts.size > 0 -%}
   <div class="tabs">
-    <input type="radio" class="tabs__radio" name="tabs-example" id="tab1" checked>
-    <label for="tab1" class="tabs__label">Blog</label>
+    <input type="radio" class="tabs__radio" name="tabs-example" id="tab-blog-posts" checked>
+    <label for="tab-blog-posts" class="tabs__label">Blog</label>
     <div class="tabs__content">
       <div id="content1" class="tab-content">
         <!-- <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2> -->
@@ -37,8 +48,8 @@ layout: default
 
       </div>
     </div>
-    <input type="radio" class="tabs__radio" name="tabs-example" id="tab2">
-    <label for="tab2" class="tabs__label">Projects</label>
+    <input type="radio" class="tabs__radio" name="tabs-example" id="tab-portfolio">
+    <label for="tab-portfolio" class="tabs__label">Projects</label>
     <div class="tabs__content">
       <div id="content2" class="tab-content">
         <div>
