--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@ layout: default
   {%- if site.posts.size > 0 -%}
   <div class="tabs">
     <input type="radio" class="tabs__radio" name="tabs-example" id="tab-blog-posts" checked>
-    <label for="tab-blog-posts" class="tabs__label">Blog</label>
+    <label for="tab-blog-posts" class="tabs__label" style="margin-left:-15px;">Blog</label>
     <div class="tabs__content">
       <div id="content1" class="tab-content">
         <!-- <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2> -->
@@ -49,7 +49,7 @@ layout: default
       </div>
     </div>
     <input type="radio" class="tabs__radio" name="tabs-example" id="tab-portfolio">
-    <label for="tab-portfolio" class="tabs__label">Projects</label>
+    <label for="tab-portfolio" class="tabs__label"style="margin-right:-15px;">Projects</label>
     <div class="tabs__content">
       <div id="content2" class="tab-content">
         <div>
