Start adding more to portfolio

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -68,6 +68,10 @@ layout: default
             <img src='/assets/portfolio/aqifast/aqifast-1.jpg'></img>
           </div>
         </div>
+
+        <div>
+          <a href="https://aqifast.com"<h2>Klar.mx Mobile App (2022) <img src="/assets/icons/external-link.svg"/></h2></a>
+        </div>
       </div>
     </div>
   </div>
