Fix display on mobile

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,7 +52,7 @@ layout: default
     <label for="tab-portfolio" class="tabs__label"style="margin-right:-15px;">Projects</label>
     <div class="tabs__content">
       <div id="content2" class="tab-content">
-        <div>
+        <div class="portfolio-item">
           <a href="https://slowmad.app"><h2>Slowmad.app (2024) <img src="/assets/icons/external-link.svg"/></h2></a>
           <p>Trip planner using Claude AI for recommendations and routing</p>
           <div class="portfolio-image-row">
@@ -61,7 +61,7 @@ layout: default
           </div>
         </div>
 
-        <div>
+        <div class="portfolio-item">
           <a href="https://aqifast.com"><h2>Aqifast.com (2024) <img src="/assets/icons/external-link.svg"/></h2></a>
           <p>Design and performance focused AQI (Air Quality Index) checker</p>
           <div class="portfolio-image-row">
@@ -69,8 +69,8 @@ layout: default
           </div>
         </div>
 
-        <div>
-          <a href="https://aqifast.com"<h2>Klar.mx Mobile App (2022) <img src="/assets/icons/external-link.svg"/></h2></a>
+        <div class="portfolio-item">
+          <a href="https://play.google.com/store/apps/details?id=mx.klar.app"><h2>Klar.mx - Mobile app (2022) <img src="/assets/icons/external-link.svg"/></h2></a>
         </div>
       </div>
     </div>
