Add portfolio screenshots

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,7 +53,7 @@ layout: default
     <div class="tabs__content">
       <div id="content2" class="tab-content">
         <div class="portfolio-item">
-          <a href="https://slowmad.app"><h2>Slowmad.app (2024) <img src="/assets/icons/external-link.svg"/></h2></a>
+          <a href="https://slowmad.app" target="_blank" rel="noopener noreferrer"><h2>Slowmad.app (2024) <img src="/assets/icons/external-link.svg"/></h2></a>
           <p>Trip planner using Claude AI for recommendations and routing</p>
           <div class="portfolio-image-row">
             <img src='/assets/portfolio/slowmad/slowmad-1.jpg'></img>
@@ -61,8 +61,8 @@ layout: default
           </div>
         </div>
 
-        <div class="portfolio-item">
-          <a href="https://aqifast.com"><h2>Aqifast.com (2024) <img src="/assets/icons/external-link.svg"/></h2></a>
+        <div class="portfolio-item" style="display: none;">
+          <a href="https://aqifast.com" target="_blank" rel="noopener noreferrer"><h2>Aqifast.com (2024) <img src="/assets/icons/external-link.svg"/></h2></a>
           <p>Design and performance focused AQI (Air Quality Index) checker</p>
           <div class="portfolio-image-row">
             <img src='/assets/portfolio/aqifast/aqifast-1.jpg'></img>
@@ -70,7 +70,38 @@ layout: default
         </div>
 
         <div class="portfolio-item">
-          <a href="https://play.google.com/store/apps/details?id=mx.klar.app"><h2>Klar.mx - Mobile app (2022) <img src="/assets/icons/external-link.svg"/></h2></a>
+          <a href="https://play.google.com/store/apps/details?id=mx.klar.app" target="_blank" rel="noopener noreferrer"><h2>Klar.mx (2022) <img src="/assets/icons/external-link.svg"/></h2></a>
+          <p>Credit focused challenger bank for Mexico</p>
+          <div class="portfolio-image-row">
+            <img src='/assets/portfolio/klar/klar-1.webp'></img>
+            <img src='/assets/portfolio/klar/klar-2.webp'></img>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <a href="planet.com"><h2>Planet.com (2017) <img src="/assets/icons/external-link.svg"/></h2></a>
+          <p>Satellite aerospace company</p>
+          <div class="portfolio-image-row">
+            <img src='/assets/portfolio/planet.svg'></img>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <a href="https://n26.com/en-at/blog/take-a-tour-of-the-brand-new-n26-for-web"><h2>N26 (2016) <img src="/assets/icons/external-link.svg"/></h2></a>
+          <p>German challenger bank</p>
+          <div class="portfolio-image-row">
+            <img src='/assets/portfolio/n26/n26-3.png'></img>
+          </div>
+        </div>
+
+        <div class="portfolio-item">
+          <a href="blacklane.de"><h2>Blacklane (2015) <img src="/assets/icons/external-link.svg"/></h2></a>
+          <p>Luxury car booking service</p>
+        </div>
+
+        <div class="portfolio-item">
+          <a href="https://www.verizonconnect.com/solutions/route-planning-software/"><h2>Telogis (2014) <img src="/assets/icons/external-link.svg"/></h2></a>
+          <p>Delivery route planning</p>
         </div>
       </div>
     </div>
