Update portfolio images

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -71,10 +71,11 @@ layout: default
 
         <div class="portfolio-item">
           <a href="https://play.google.com/store/apps/details?id=mx.klar.app" target="_blank" rel="noopener noreferrer"><h2>Klar.mx (2022) <img src="/assets/icons/external-link.svg"/></h2></a>
-          <p>Credit focused challenger bank for Mexico</p>
+          <p>Credit challenger bank for Mexico</p>
           <div class="portfolio-image-row">
             <img src='/assets/portfolio/klar/klar-1.webp'></img>
             <img src='/assets/portfolio/klar/klar-2.webp'></img>
+            <img src='/assets/portfolio/klar/klar-3.webp'></img>
           </div>
         </div>
 
@@ -82,26 +83,24 @@ layout: default
           <a href="planet.com"><h2>Planet.com (2017) <img src="/assets/icons/external-link.svg"/></h2></a>
           <p>Satellite aerospace company</p>
           <div class="portfolio-image-row">
-            <img src='/assets/portfolio/planet.svg'></img>
+            <img src='/assets/portfolio/planet/planet-1.jpg' class="big"></img>
           </div>
         </div>
 
         <div class="portfolio-item">
           <a href="https://n26.com/en-at/blog/take-a-tour-of-the-brand-new-n26-for-web"><h2>N26 (2016) <img src="/assets/icons/external-link.svg"/></h2></a>
-          <p>German challenger bank</p>
+          <p>Challenger bank for Germany</p>
           <div class="portfolio-image-row">
-            <img src='/assets/portfolio/n26/n26-3.png'></img>
+            <img src='/assets/portfolio/n26/n26-3.png' class="big"></img>
           </div>
         </div>
 
         <div class="portfolio-item">
-          <a href="blacklane.de"><h2>Blacklane (2015) <img src="/assets/icons/external-link.svg"/></h2></a>
+          <a href="blacklane.com"><h2>Blacklane (2015) <img src="/assets/icons/external-link.svg"/></h2></a>
           <p>Luxury car booking service</p>
-        </div>
-
-        <div class="portfolio-item">
-          <a href="https://www.verizonconnect.com/solutions/route-planning-software/"><h2>Telogis (2014) <img src="/assets/icons/external-link.svg"/></h2></a>
-          <p>Delivery route planning</p>
+          <div class="portfolio-image-row">
+            <img src='/assets/portfolio/blacklane/blacklane-1.png'></img>
+          </div>
         </div>
       </div>
     </div>
