--- a/assets/main.scss
+++ b/assets/main.scss
@@ -136,6 +136,10 @@ body {
   border-radius: 4px;
 }
 
+.portfolio-image-row img.big {
+  max-width: 66%;
+}
+
 .rss-subscribe {
   margin-bottom: 0;
 }
