--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,8 +20,13 @@ details > summary {
   list-style: none;
 }
 
+summary {
+  cursor: pointer;
+}
+
 summary h2 {
   margin-left: 24px;
+  color: #DE5b1b;
 }
 
 details > summary::marker,
@@ -86,8 +91,8 @@ details[open] > summary:before {
         <div class="portfolio-item">
           <details>
             <summary>
-              <a href="https://slowmad.app" target="_blank" rel="noopener noreferrer"><h2>Slowmad.app (2024) <img src="/assets/icons/external-link.svg"/></h2></a>
-              <p>Trip planner using Claude AI for recommendations and routing</p>
+              <h2>Slowmad.app (2024) <a href="https://slowmad.app" target="_blank" rel="noopener noreferrer"><img src="/assets/icons/external-link.svg"/></a></h2>
+              <p>Mobile first trip planner using Claude AI for recommendations and routing</p>
             </summary>
             <div class="portfolio-image-row">
               <img src='/assets/portfolio/slowmad/slowmad-1.jpg'></img>
@@ -98,40 +103,52 @@ details[open] > summary:before {
 
         <div class="portfolio-item">
           <details>
-            <summary><a href="https://play.google.com/store/apps/details?id=mx.klar.app" target="_blank" rel="noopener noreferrer"><h2>Klar.mx (2022) <img src="/assets/icons/external-link.svg"/></h2></a>
-            <p>Credit challenger bank for Mexico</p></summary>
+            <summary>
+              <h2>Klar.mx (2022) <a href="https://play.google.com/store/apps/details?id=mx.klar.app" target="_blank" rel="noopener noreferrer"><img src="/assets/icons/external-link.svg"/></a></h2>
+              <p>Mexican neobank cross platform mobile app focused on credit</p>
+            </summary>
             <div class="portfolio-image-row">
-            <img src='/assets/portfolio/klar/klar-1.webp'></img>
-            <img src='/assets/portfolio/klar/klar-2.webp'></img>
-            <img src='/assets/portfolio/klar/klar-3.webp'></img>
-          </div>
+              <img src='/assets/portfolio/klar/klar-1.webp'></img>
+              <img src='/assets/portfolio/klar/klar-2.webp'></img>
+              <img src='/assets/portfolio/klar/klar-3.webp'></img>
+            </div>
+          </details>
         </div>
 
         <div class="portfolio-item">
           <details>
-            <summary><a href="planet.com"><h2>Planet.com (2017) <img src="/assets/icons/external-link.svg"/></h2></a>
-            <p>Satellite aerospace company</p></summary>
+            <summary>
+              <h2>Planet.com (2017) <a href="planet.com"><img src="/assets/icons/external-link.svg"/></a></h2>
+              <p>Satellite imagery web application for access management and tasking</p>
+            </summary>
             <div class="portfolio-image-row">
-            <img src='/assets/portfolio/planet/planet-1.jpg' class="big"></img>
-          </div>
+              <img src='/assets/portfolio/planet/planet-1.jpg' class="big"></img>
+            </div>
+          </details>
         </div>
 
         <div class="portfolio-item">
           <details>
-            <summary><a href="https://n26.com/en-at/blog/take-a-tour-of-the-brand-new-n26-for-web"><h2>N26 (2016) <img src="/assets/icons/external-link.svg"/></h2></a>
-            <p>Challenger bank for Germany</p></summary>
+            <summary>
+              <h2>N26 (2016) <a href="https://n26.com/en-at/blog/take-a-tour-of-the-brand-new-n26-for-web"><img src="/assets/icons/external-link.svg"/></a></h2>
+              <p>German neobank web application focused around UX and premium offerings</p>
+            </summary>
             <div class="portfolio-image-row">
-            <img src='/assets/portfolio/n26/n26-3.png' class="big"></img>
-          </div>
+              <img src='/assets/portfolio/n26/n26-3.png' class="big"></img>
+            </div>
+          </details>
         </div>
 
         <div class="portfolio-item">
           <details>
-            <summary><a href="blacklane.com"><h2>Blacklane (2015) <img src="/assets/icons/external-link.svg"/></h2></a>
-            <p>Luxury car booking service</p></summary>
+            <summary>
+              <h2>Blacklane (2015) <a href="blacklane.com"><img src="/assets/icons/external-link.svg"/></a></h2>
+              <p>Luxury car booking service</p>
+            </summary>
             <div class="portfolio-image-row">
-            <img src='/assets/portfolio/blacklane/blacklane-1.png'></img>
-          </div>
+              <img src='/assets/portfolio/blacklane/blacklane-1.png'></img>
+            </div>
+          </details>
         </div>
       </div>
     </div>
