Fix planet and blacklane links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -118,7 +118,7 @@ details[open] > summary:before {
         <div class="portfolio-item">
           <details>
             <summary>
-              <h2>Planet.com (2017) <a href="planet.com"><img src="/assets/icons/external-link.svg"/></a></h2>
+              <h2>Planet.com (2017) <a href="https://planet.com"><img src="/assets/icons/external-link.svg"/></a></h2>
               <p>Satellite imagery web application for access management and tasking</p>
             </summary>
             <div class="portfolio-image-row">
@@ -142,7 +142,7 @@ details[open] > summary:before {
         <div class="portfolio-item">
           <details>
             <summary>
-              <h2>Blacklane (2015) <a href="blacklane.com"><img src="/assets/icons/external-link.svg"/></a></h2>
+              <h2>Blacklane (2015) <a href="https://blacklane.com"><img src="/assets/icons/external-link.svg"/></a></h2>
               <p>Luxury car booking service</p>
             </summary>
             <div class="portfolio-image-row">
