Add Rough to portfolio

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -91,6 +91,18 @@ details[open] > summary:before {
         <div class="portfolio-item">
           <details>
             <summary>
+              <h2>Rough.app (2024) <a href="https://rough.app" target="_blank" rel="noopener noreferrer"><img src="/assets/icons/external-link.svg"/></a></h2>
+              <p>Project management tool for remote teams</p>
+            </summary>
+            <div class="portfolio-image-row">
+              <img class="big" src='/assets/portfolio/rough/rough-1.png'></img>
+            </div>
+          </details>
+        </div>
+
+        <div class="portfolio-item">
+          <details>
+            <summary>
               <h2>Slowmad.app (2024) <a href="https://slowmad.app" target="_blank" rel="noopener noreferrer"><img src="/assets/icons/external-link.svg"/></a></h2>
               <p>Mobile first trip planner using Claude AI for recommendations and routing</p>
             </summary>
