--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <script>
     var urlParams = new URLSearchParams(window.location.search);
-    if (urlParams.get('portfolio') === 'true') {
+    if (urlParams.get('projects') === 'true') {
       window.onload = function() {
         document.querySelector('#tab-portfolio').checked = true;
       };
