Add calendly widget

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,10 @@
   {%- include head.html -%}
 
   <body>
-
     {%- include header.html -%}
+
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper background-block-color">
