Update resume reference

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -44,6 +44,6 @@
         <use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use>
       </svg> <span>{{ site.rss | escape }}</span></a></li>{%- endif -%}
 
-  <a target="_blank" href="https://raw.githubusercontent.com/SimonHFrost/static-resume/master/Simon%20Frost%20Résumé%2C%20Senior%20Front%20End%20Engineer.pdf"><img class="png-icon" title="Resume" src="/assets/icons/document.png"></img></a>
+  <a target="_blank" href="https://raw.githubusercontent.com/SimonHFrost/static-resume/master/Simon%20Frost%20Product%20Engineer%20Resume.pdf"><img class="png-icon" title="Resume" src="/assets/icons/document.png"></img></a>
   <a target="_blank" href="https://bsky.app/profile/simonfrost.mx"><img class="png-icon" title="BlueSky" src="/assets/icons/bluesky.png"></img></a>
 </ul>
