--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,9 +12,10 @@ layout: default
 </script>
 
 <style>
-/* Removed details/summary styles since expanding/collapsing is no longer needed */
+.portfolio-item h2 {
+  color: #DE5b1b;
+}
 </style>
-
 
 <div class="home">
   {%- if page.title -%}
@@ -57,7 +58,7 @@ layout: default
       <div id="content2" class="tab-content">
         <div class="portfolio-item">
           <div>
-            <h2>Rough.app (2024) <a href="https://rough.app" target="_blank" rel="noopener noreferrer"><img src="/assets/icons/external-link.svg"/></a></h2>
+            <h2><a href="https://rough.app" target="_blank" rel="noopener noreferrer">Rough.app (2024) <img src="/assets/icons/external-link.svg"/></a></h2>
             <p>Project management tool for remote teams</p>
             <div class="portfolio-image-row">
               <img class="big" src='/assets/portfolio/rough/rough-1.png'></img>
@@ -67,7 +68,7 @@ layout: default
 
         <div class="portfolio-item">
           <div>
-            <h2>Slowmad.app (2024) <a href="https://slowmad.app" target="_blank" rel="noopener noreferrer"><img src="/assets/icons/external-link.svg"/></a></h2>
+            <h2><a href="https://slowmad.app" target="_blank" rel="noopener noreferrer">Slowmad.app (2024) <img src="/assets/icons/external-link.svg"/></a></h2>
             <p>Mobile first trip planner using Claude AI for recommendations and routing</p>
             <div class="portfolio-image-row">
               <img src='/assets/portfolio/slowmad/slowmad-1.jpg'></img>
@@ -78,7 +79,7 @@ layout: default
 
         <div class="portfolio-item">
           <div>
-            <h2>Klar.mx (2022) <a href="https://play.google.com/store/apps/details?id=mx.klar.app" target="_blank" rel="noopener noreferrer"><img src="/assets/icons/external-link.svg"/></a></h2>
+            <h2><a href="https://play.google.com/store/apps/details?id=mx.klar.app" target="_blank" rel="noopener noreferrer">Klar.mx (2022) <img src="/assets/icons/external-link.svg"/></a></h2>
             <p>Mexican neobank cross platform mobile app focused on credit</p>
             <div class="portfolio-image-row">
               <img src='/assets/portfolio/klar/klar-1.webp'></img>
@@ -90,7 +91,7 @@ layout: default
 
         <div class="portfolio-item">
           <div>
-            <h2>Planet.com (2017) <a href="https://planet.com"><img src="/assets/icons/external-link.svg"/></a></h2>
+            <h2><a href="https://planet.com" target="_blank" rel="noopener noreferrer">Planet.com (2017) <img src="/assets/icons/external-link.svg"/></a></h2>
             <p>Satellite imagery web application for access management and tasking</p>
             <div class="portfolio-image-row">
               <img src='/assets/portfolio/planet/planet-1.jpg' class="big"></img>
@@ -100,7 +101,7 @@ layout: default
 
         <div class="portfolio-item">
           <div>
-            <h2>N26 (2016) <a href="https://n26.com/en-at/blog/take-a-tour-of-the-brand-new-n26-for-web"><img src="/assets/icons/external-link.svg"/></a></h2>
+            <h2><a href="https://n26.com/en-at/blog/take-a-tour-of-the-brand-new-n26-for-web" target="_blank" rel="noopener noreferrer">N26 (2016) <img src="/assets/icons/external-link.svg"/></a></h2>
             <p>German neobank web application focused around UX and premium offerings</p>
             <div class="portfolio-image-row">
               <img src='/assets/portfolio/n26/n26-3.png' class="big"></img>
@@ -110,7 +111,7 @@ layout: default
 
         <div class="portfolio-item">
           <div>
-            <h2>Blacklane (2015) <a href="https://blacklane.com"><img src="/assets/icons/external-link.svg"/></a></h2>
+            <h2><a href="https://blacklane.com" target="_blank" rel="noopener noreferrer">Blacklane (2015) <img src="/assets/icons/external-link.svg"/></a></h2>
             <p>Luxury car booking service</p>
             <div class="portfolio-image-row">
               <img src='/assets/portfolio/blacklane/blacklane-1.png'></img>
